# mmpose

./: pyproject.toml  requirements.txt
mmpose/apis/inferencers/utils/: default_det_models.py
