[project]
name = "mmpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "chumpy>=0.71",
    "json-tricks>=3.17.3",
    "matplotlib>=3.10.0",
    "munkres>=1.1.4",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "scipy>=1.15.0",
    "torch>=1.8",
    "torchvision>=0.19.1",
    "xtcocotools>=1.12",
]
