[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
include = ["mmpose"]

[tool.hatch.build.targets.wheel]
include = ["mmpose"]

[tool.uv.sources]
chumpy = { git = "https://github.com/nico-von-huene/chumpy.git" }

[project]
name = "mmpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chumpy>=0.71",
    "json-tricks>=3.17.3",
    "matplotlib>=3.10.0",
    "munkres>=1.1.4",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "scipy>=1.15.0",
    "torch>=1.8",
    "torchvision>=0.19.1",
    "xtcocotools>=1.12",
]

[tool.uv]
environments = ["sys_platform == 'linux' or sys_platform == 'darwin' and platform_machine == 'x86_64'"]
resolution = "highest"
# Disable build isolation for torch to allow custom compilation
no-build-isolation = ["torch"]